Thu May 29 17:14:04 BST 2003  Olly Betts <olly@survex.com>

	* extra/queryparser.yy,extra/queryparsertest.cc: A phrasemaker isn't
	  a phrasemaker unless it's preceded by an alphanumeric, "+", or "-";
	  If a single term is in (), ignore the ().

Thu May 29 16:45:39 BST 2003  Olly Betts <olly@survex.com>

	* extra/queryparser.yy,extra/queryparsertest.cc: Improved handling
	  of various odd queries encountered in real life applications.

Thu May 29 01:50:51 BST 2003  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated more.

Thu May 29 01:26:50 BST 2003  Olly Betts <olly@survex.com>

	* api/,backends/database.cc,backends/inmemory/,backends/multi/,
	  backends/muscat36/,backends/net/,backends/quartz/,common/,
	  docs/overview.html,docs/quickstart.html,
	  docs/quickstartexpand.cc.html,extra/queryparser.yy,include/om/om.h,
	  include/xapian/,matcher/,net/,tests/api_db.cc,tests/api_posdb.cc,
	  tests/quartztest.cc,testsuite/: Converted remaining om_xxx types
	  to Xapian::xxx.

Wed May 28 23:06:18 BST 2003  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Wed May 28 22:59:17 BST 2003  Olly Betts <olly@survex.com>

	* tests/api_db.cc: Spelling correction: accross -> across.

Wed May 28 20:24:32 BST 2003  Olly Betts <olly@survex.com>

	* extra/: OmQueryParser -> Xapian::QueryParser, etc.

Wed May 28 20:03:48 BST 2003  Olly Betts <olly@survex.com>

	* api/omdocument.cc: Removed include of defunct header
	  modifieddocument.h.

Wed May 28 20:00:56 BST 2003  Olly Betts <olly@survex.com>

	* api/maptermlist.h,api/omdocument.cc,api/omvalueiterator.cc,
	  backends/inmemory/inmemory_document.cc,
	  backends/inmemory/inmemory_document.h,backends/muscat36/,
	  backends/net/net_document.cc,backends/net/net_document.h,
	  backends/quartz/quartz_document.cc,backends/quartz/quartz_document.h,
	  common/Makefile.am,common/document.h,common/modifieddocument.h,
	  include/xapian/document.h,tests/api_db.cc: Fixed bug in refactored